<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:padding="16dp"
    android:background="@color/basecolor"
    android:layout_height="match_parent"
    tools:context=".ui.activity.MainActivity">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/layout_et_mainUI"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="12dp"
        app:startIconDrawable="@drawable/ic_baseline_person_search_24"
        app:endIconMode="clear_text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_width="0dp"
        android:layout_height="wrap_content">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_mainUI"
            android:inputType="text"
            android:maxLines="1"
            android:layout_gravity="center_vertical"
            android:hint="@string/looking_for_someone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    </com.google.android.material.textfield.TextInputLayout>

    <ImageView
        android:id="@+id/iv_illustration_mainUI"
        android:src="@drawable/ic_undraw_searching_blue"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/layout_et_mainUI"
        android:foregroundGravity="center"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_width="160dp"
        android:layout_height="160dp"
        android:contentDescription="@string/seacrh_illustration" />

    <ImageView
        android:id="@+id/iv_notfound_mainUI"
        app:layout_constraintTop_toBottomOf="@id/layout_et_mainUI"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:visibility="gone"
        android:src="@drawable/ic_undraw_not_found_two"
        android:layout_width="160dp"
        android:layout_height="100dp"
        android:contentDescription="@string/illustation_not_found" />

    <TextView
        android:id="@+id/tv_none_mainUI"
        app:layout_constraintTop_toBottomOf="@id/iv_notfound_mainUI"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="4dp"
        android:text="@string/no_data_found"
        android:visibility="gone"
        android:textStyle="bold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_users_mainUI"
        app:layout_constraintTop_toBottomOf="@id/layout_et_mainUI"
        android:layout_marginTop="4dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_width="0dp"
        android:layout_height="0dp"/>

    <ProgressBar
        android:id="@+id/pb_mainUI"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/layout_et_mainUI"
        app:layout_constraintBottom_toBottomOf="parent"
        android:visibility="gone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

</androidx.constraintlayout.widget.ConstraintLayout>