<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/basecolor"
    tools:context=".ui.activity.DetailUserActivity">


    <ProgressBar
        android:id="@+id/pb_userinfo_detailUI"
        style="@style/Widget.AppCompat.ProgressBar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/tabs_detailUI"
        android:visibility="gone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/iv_profile_detailUI"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="20dp"
        tools:src="@tools:sample/avatars"
        android:layout_marginStart="16dp"
        android:layout_width="96dp"
        android:layout_height="96dp"
        android:src="@drawable/placeholder_user"
        android:contentDescription="@string/photo_of_user" />

    <ToggleButton
        android:id="@+id/toggle_fav_detailUI"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:background="@drawable/favourite_ic_toggle"
        android:textOff=""
        android:textOn=""
        app:layout_constraintBottom_toBottomOf="@id/iv_profile_detailUI"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="12dp"
        android:layout_marginBottom="-12dp"
        android:focusable="false"
        android:focusableInTouchMode="false" />




    <ImageView
        android:id="@+id/ic_wokr_detailUI"
        android:src="@drawable/ic_baseline_work_24"
        app:layout_constraintBottom_toBottomOf="@id/iv_profile_detailUI"
        app:layout_constraintStart_toEndOf="@id/iv_profile_detailUI"
        android:layout_marginStart="12dp"
        android:layout_width="18dp"
        android:layout_height="18dp"
        android:contentDescription="@string/ic_workplace" />

    <TextView
        android:id="@+id/tv_worktext_detailUI"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:text="@string/work"
        android:textColor="@color/darkcolor"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="@id/ic_wokr_detailUI"
        app:layout_constraintEnd_toStartOf="@id/tv_workdata_detailUI"
        app:layout_constraintStart_toEndOf="@id/ic_wokr_detailUI"
        app:layout_constraintTop_toTopOf="@id/ic_wokr_detailUI" />

    <TextView
        android:id="@+id/tv_workdata_detailUI"
        app:layout_constraintStart_toEndOf="@id/tv_worktext_detailUI"
        app:layout_constraintTop_toTopOf="@id/tv_worktext_detailUI"
        app:layout_constraintBottom_toBottomOf="@id/tv_worktext_detailUI"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginEnd="16dp"
        android:ellipsize="end"
        android:maxLines="1"
        android:text="@string/not_set"
        android:textStyle="bold"
        android:textSize="12sp"
        android:layout_marginStart="4dp"
        android:textColor="@color/darkcolor"
        android:layout_width="0dp"
        android:layout_height="wrap_content"/>




    <ImageView
        android:id="@+id/ic_location_detailUI"
        android:src="@drawable/ic_baseline_location_on_24"
        app:layout_constraintBottom_toTopOf="@id/ic_wokr_detailUI"
        app:layout_constraintStart_toStartOf="@id/ic_wokr_detailUI"
        android:layout_marginBottom="4dp"
        android:layout_width="18dp"
        android:layout_height="18dp"
        android:contentDescription="@string/ic_workplace" />

    <TextView
        android:id="@+id/tv_locationtext_detailUI"
        app:layout_constraintStart_toStartOf="@id/tv_worktext_detailUI"
        app:layout_constraintTop_toTopOf="@id/ic_location_detailUI"
        app:layout_constraintBottom_toBottomOf="@id/ic_location_detailUI"
        app:layout_constraintEnd_toStartOf="@id/tv_locationdata_detailUI"
        android:text="@string/location"
        android:textColor="@color/darkcolor"
        android:textSize="12sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/tv_locationdata_detailUI"
        app:layout_constraintStart_toEndOf="@id/tv_locationtext_detailUI"
        app:layout_constraintTop_toTopOf="@id/ic_location_detailUI"
        app:layout_constraintBottom_toBottomOf="@id/ic_location_detailUI"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginEnd="16dp"
        android:text="@string/not_set"
        android:textColor="@color/darkcolor"
        android:textStyle="bold"
        android:textSize="12sp"
        android:maxLines="1"
        android:ellipsize="end"
        android:layout_marginStart="4dp"
        android:layout_width="0dp"
        android:layout_height="wrap_content"/>





    <TextView
        android:id="@+id/tv_login_detailUI"
        app:layout_constraintBottom_toTopOf="@id/ic_location_detailUI"
        app:layout_constraintStart_toStartOf="@id/ic_wokr_detailUI"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="4dp"
        android:textColor="@color/darkcolor"
        android:layout_marginBottom="4dp"
        tools:text="Cahyadesthian"
        android:layout_width="0dp"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/tv_name_detailUI"
        app:layout_constraintBottom_toTopOf="@id/tv_login_detailUI"
        app:layout_constraintStart_toStartOf="@id/ic_location_detailUI"
        app:layout_constraintEnd_toEndOf="parent"
        tools:text="widigda"
        android:textSize="16sp"
        android:layout_marginEnd="16dp"
        android:textColor="@color/darkcolor"
        android:maxLines="1"
        android:ellipsize="end"
        android:textStyle="bold"
        android:layout_width="0dp"
        android:layout_height="wrap_content"/>




    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/gl_left_vert_detailUI"
        app:layout_constraintGuide_percent="0.25"
        android:orientation="vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/gl_half_vert_detailUI"
        app:layout_constraintGuide_percent="0.5"
        android:orientation="vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/gl_left_right_detailUI"
        app:layout_constraintGuide_percent="0.75"
        android:orientation="vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>




    <ImageView
        android:id="@+id/ic_followers_detailUI"
        android:src="@drawable/ic_baseline_follow_the_signs_24"
        app:layout_constraintTop_toBottomOf="@id/toggle_fav_detailUI"
        app:layout_constraintEnd_toStartOf="@id/gl_left_vert_detailUI"
        android:layout_marginEnd="2dp"
        android:layout_marginTop="16dp"
        android:layout_width="18dp"
        android:layout_height="18dp"
        android:contentDescription="@string/ic_following" />

    <TextView
        android:id="@+id/tv_followers_data_detailUI"
        app:layout_constraintTop_toTopOf="@id/ic_followers_detailUI"
        app:layout_constraintBottom_toBottomOf="@id/ic_followers_detailUI"
        app:layout_constraintStart_toEndOf="@id/gl_left_vert_detailUI"
        app:layout_constraintEnd_toStartOf="@id/gl_half_vert_detailUI"
        tools:text="99999999999999999999"
        android:layout_marginStart="2dp"
        android:ellipsize="end"
        android:textColor="@color/darkcolor"
        android:maxLines="1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"/>




    <ImageView
        android:id="@+id/ic_followings_detailUI"
        app:layout_constraintEnd_toStartOf="@id/gl_left_right_detailUI"
        app:layout_constraintTop_toTopOf="@id/ic_followers_detailUI"
        android:src="@drawable/ic_round_people_alt_24"
        android:layout_marginEnd="2dp"
        android:layout_width="18dp"
        android:layout_height="18dp"
        android:contentDescription="@string/ic_follower" />

    <TextView
        android:id="@+id/tv_following_data_detailUI"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="2dp"
        android:layout_marginEnd="16dp"
        android:ellipsize="end"
        android:maxLines="1"
        android:textColor="@color/darkcolor"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/gl_left_right_detailUI"
        app:layout_constraintTop_toTopOf="@id/ic_followings_detailUI"
        tools:text="99999999999999999999" />



    <com.google.android.material.tabs.TabLayout
        android:id="@+id/tabs_detailUI"
        style="@style/LigthTab"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ic_followers_detailUI"
        android:layout_marginTop="16dp"
        android:background="@drawable/tabbg"/>

    <androidx.viewpager2.widget.ViewPager2
        android:id="@+id/view_pager_detailUI"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tabs_detailUI"
        android:background="@color/lighter_blue"
        android:layout_width="0dp"
        android:layout_height="0dp"/>




</androidx.constraintlayout.widget.ConstraintLayout>